# svwdm

./: .gitignore  CMakeLists.txt  PARAMS.md  README.md  sourceme.sh
.surfer/: default.sucl  laser_to_pd.sucl  microring_tf.sucl  microring_tuner_afe_sweep.sucl  microringrow_tf.sucl  tuner_pwr_detect.sucl  tuner_search.sucl  tuner_search_lock.sucl  tuner_search_lock_row.sucl  tuner_search_row.sucl
.surfer/mappings/: ctrl_arb_if_state.map  ctrl_arb_state.map  detect_if_state.map  detect_state.map  lock_state.map  search_state.map
cmake/: ProjectUtils.cmake  VerilatorUtils.cmake  VerilogPackages.cmake
docs/: conf.py  index.rst  rtl.rst  simulator.rst  surfer.rst  tuner_handshakes.rst
docs/_static/wavedrom/: tuner_lock_interrupt.json  tuner_session_acquire.json  tuner_transaction_step.json
lib/cpp/models/: search_phy.hpp
lib/cpp/testbench/: verilator_tb.hpp
lib/verilog/circuits/: adc.sv
lib/verilog/photonics/: laser.sv  microring.sv  microringrow.sv  photodetector.sv  wdm_pkg.sv  wprobe.sv
lib/verilog/tuner/: README.md  tuner_ctrl_arb_if.sv  tuner_ctrl_arb_phy.sv  tuner_ctrl_txn_adapter.sv  tuner_lock_if.sv  tuner_lock_phy.sv  tuner_phy.sv  tuner_phy_pkg.sv  tuner_pkg.sv  tuner_pwr_detect_if.sv  tuner_pwr_detect_phy.sv  tuner_search_if.sv  tuner_search_phy.sv  tuner_txn_if.sv
lib/verilog/utils/: timer.sv
scripts/: open_wave_surfer.sh  plot_tuner_sims.sh  run_tuner_search_lock_row_plot.sh  run_tuner_search_lock_stress_plot.sh  run_tuner_sims.sh  wave.sh
sim/: CMakeLists.txt
sim/hello_world/: CMakeLists.txt  hello_world.cpp
sim/laser_to_pd/: CMakeLists.txt  dut.sv  tb.cpp
sim/microring_tf/: CMakeLists.txt  dut.sv  tb.cpp
sim/microring_tuner_afe_sweep/: CMakeLists.txt  dut.sv  tb.cpp
sim/microringrow_tf/: CMakeLists.txt  dut.sv  tb.cpp
sim/tuner_pwr_detect/: CMakeLists.txt  dut.sv  tb.cpp
sim/tuner_search/: dut.sv  dut_multiring.sv  tb.cpp
sim/tuner_search_lock/: CMakeLists.txt  dut.sv  tb.cpp
sim/tuner_search_lock_row/: CMakeLists.txt  dut.sv  tb.cpp
sim/tuner_search_lock_stress/: CMakeLists.txt  dut.sv  tb.cpp
sim/tuner_search_row/: dut.sv  tb.cpp
src/hello_world/: hello_world.sv
src/utils/cpp/: .sweep.hpp.swp  sweep.hpp
tests/search_phy_model/: CMakeLists.txt  main.cpp
utils/: plot_tf.py  plot_wave  plot_wave.py
